--- a/instance_methods.ipynb
+++ b/instance_methods.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Instance Methods - Lab"
+    "# Instance Methods - Lab done by `Eugene Maina` "
    ]
   },
   {
